Closed Bug 272360 Opened 21 years ago Closed 21 years ago

Missing break in nsViewSourceHTML.cpp

Categories

(Core :: DOM: HTML Parser, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: mrbkap, Assigned: mrbkap)

Details

Attachments

(1 file)

I noticed this a while ago and it's been bugging me. Patch coming up.
Attached patch patch v1Splinter Review
Attachment #167394 - Flags: superreview?(bzbarsky)
Attachment #167394 - Flags: review?(bzbarsky)
Comment on attachment 167394 [details] [diff] [review] patch v1 r+sr=bzbarsky
Attachment #167394 - Flags: superreview?(bzbarsky)
Attachment #167394 - Flags: superreview+
Attachment #167394 - Flags: review?(bzbarsky)
Attachment #167394 - Flags: review+
Checked in.
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: