bug 272360: missing break in nsViewSourceHTML.cpp r+sr=bzbarsky